# Ross-Lloyd--Udacity-Robotics-ND-AMCL-Localization

./: README.md
drive_bot/: CMakeLists.txt  drive_bot.cpp  drive_bot_comments.h  package.xml  wpts.odt
drive_bot/src/: drive_bot.h
six_bot/urdf/: six_bot.gazebo
udacity_bot/: mainpage.dox  manifest.xml  package.xml  udacity_bot (copy).xacro.OFF
udacity_bot/config/: base_local_planner_params.yaml  costmap_common_params.yaml
udacity_bot/launch/: amcl.launch  amclNO.launch  udacity_world.launch
udacity_bot/urdf/: udacity_bot.gazebo  udacity_bot.xacro
udacity_bot_teleop/: CMakeLists.txt  package.xml
udacity_bot_teleop/launch/: keyboard_teleop.launch  xbox360_teleop.launch
udacity_bot_teleop/launch/includes/: velocity_smoother.launch.xml
udacity_bot_teleop/scripts/: udacity_bot_teleop_key
